Refactor streaming functionality by removing FFmpegStream and integrating WebRTCStream. Updated package.json to include simple-peer dependency. Added streaming mode controls in frontend for WebRTC and screenshot modes, along with corresponding UI updates and event handling.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -60,6 +60,28 @@
                 <i class="fas fa-stop-circle"></i> Stop Stream
               </button>
             </div>
+            <div class="streaming-mode-controls">
+              <h4>Streaming Mode:</h4>
+              <div class="mode-buttons">
+                <button
+                  id="enable-screenshot-mode"
+                  class="btn btn-sm btn-secondary"
+                >
+                  <i class="fas fa-camera"></i> Screenshot Mode
+                </button>
+                <button
+                  id="enable-webrtc-mode"
+                  class="btn btn-sm btn-primary active"
+                >
+                  <i class="fas fa-globe"></i> WebRTC Mode
+                </button>
+              </div>
+              <div class="mode-info">
+                <small id="current-mode-info"
+                  >Current: WebRTC Mode (for real iOS device)</small
+                >
+              </div>
+            </div>
           </div>
 
           <div class="control-section">
